--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ form input, form textarea, form select {
 
 form textarea {
     resize: vertical;
-    height: 100px;
+    height: 50px;
 }
 
 a.link {
@@ -182,4 +182,37 @@ a.link:hover {
     max-width: 600px;
     display: block;
     margin: 20px auto;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.search-select {
+    font-size: 12px;
+    width: 100px;
+    margin-right: 5px;
+    box-sizing: border-box;
+}
+
+.search-input {
+    font-size: 12px;
+    width: 270px;
+    margin-right: 5px;
+    box-sizing: border-box;
+}
+
+.search-button {
+    font-size: 12px;
+    width: 70px;
+    border-radius: 5px;
+    margin-right: 5px;
+    background-color: #8b8c87;
+    box-sizing: border-box;
+}
+
+.search-button:hover {
+    background-color: #2d2d2d;
 }
