--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,6 @@ a.link:hover {
 .search-button:hover {
     background-color: #2d2d2d;
 }
-=======
 /* adminpage sidebar css */
 .admin-container {
     display: flex;
@@ -258,4 +257,36 @@ a.link:hover {
     margin-top: 20px; /* header 높이에 맞게 조정 */
 
 }
->>>>>>> cb35dfe934d594422e5eb602f84de2e20b848385
+
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.search-select {
+    font-size: 12px;
+    width: 100px;
+    margin-right: 5px;
+    box-sizing: border-box;
+}
+
+.search-input {
+    font-size: 12px;
+    width: 270px;
+    margin-right: 5px;
+    box-sizing: border-box;
+}
+
+.search-button {
+    font-size: 12px;
+    width: 70px;
+    border-radius: 5px;
+    margin-right: 5px;
+    background-color: #8b8c87;
+    box-sizing: border-box;
+}
+
+.search-button:hover {
+    background-color: #2d2d2d;
+}
