--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,16 @@ body {
 	margin: 20px auto; 
 }
 
+.admin-image{
+	width:100%;
+	height: 80px auto;
+	max-width: 600px;
+	display: block;
+	margin: 20px auto;
+	
+}
+
+
 .main-content{
 	padding: 20px;
 	width: 100%;
